src/XPlaneSDK/CHeaders/XPLM/XPLMDisplay.h


typedef enum {
#if defined(XPLM_DEPRECATED)
  xplm_Phase_FirstScene = 0,
#endif 
#if defined(XPLM_DEPRECATED)
  xplm_Phase_Terrain = 5,
#endif 
#if defined(XPLM_DEPRECATED)
  xplm_Phase_Airports = 10,
#endif 
#if defined(XPLM_DEPRECATED)
  xplm_Phase_Vectors = 15,
#endif 
#if defined(XPLM_DEPRECATED)
  xplm_Phase_Objects = 20,
#endif 
#if defined(XPLM_DEPRECATED)
  xplm_Phase_Airplanes = 25,
#endif 
#if defined(XPLM_DEPRECATED)
  xplm_Phase_LastScene = 30,
#endif 
#if defined(XPLM302)
  xplm_Phase_Modern3D = 31,
#endif 
  xplm_Phase_FirstCockpit = 35,
  xplm_Phase_Panel = 40,
  xplm_Phase_Gauges = 45,
  xplm_Phase_Window = 50,
  xplm_Phase_LastCockpit = 55,
#if defined(XPLM200)
  xplm_Phase_LocalMap3D = 100,
#endif 
#if defined(XPLM200)
  xplm_Phase_LocalMap2D = 101,
#endif 
#if defined(XPLM200)
  xplm_Phase_LocalMapProfile = 102,
#endif 
} XPLMDrawingPhase;
typedef int (* XPLMDrawCallback_f)(
                         XPLMDrawingPhase     inPhase,
                         int                  inIsBefore,
                         void *               inRefcon);
XPLM_API int        XPLMRegisterDrawCallback(
                         XPLMDrawCallback_f   inCallback,
                         XPLMDrawingPhase     inPhase,
                         int                  inWantsBefore,
                         void *               inRefcon);
XPLM_API int        XPLMUnregisterDrawCallback(
                         XPLMDrawCallback_f   inCallback,
                         XPLMDrawingPhase     inPhase,
                         int                  inWantsBefore,
                         void *               inRefcon);