src/XPlaneSDK/CHeaders/XPLM/XPLMDataAccess.h


typedef void * XPLMDataRef;
typedef enum {
  xplmType_Unknown = 0,
  xplmType_Int = 1,
  xplmType_Float = 2,
  xplmType_Double = 4,
  xplmType_FloatArray = 8,
  xplmType_IntArray = 16,
  xplmType_Data = 32,
} XPLMDataTypeID;
XPLM_API int        XPLMCountDataRefs(void);
XPLM_API void       XPLMGetDataRefsByIndex(
                         int                  offset,
                         int                  count,
                         XPLMDataRef *        outDataRefs);
typedef struct {
     int                       structSize;
     const char *              name;
     XPLMDataTypeID            type;
     int                       writable;
     XPLMPluginID              owner;
} XPLMDataRefInfo_t;
XPLM_API void       XPLMGetDataRefInfo(
                         XPLMDataRef          inDataRef,
                         XPLMDataRefInfo_t *  outInfo);
XPLM_API XPLMDataRef XPLMFindDataRef(
                         const char *         inDataRefName);
XPLM_API int        XPLMCanWriteDataRef(
                         XPLMDataRef          inDataRef);
XPLM_API int        XPLMIsDataRefGood(
                         XPLMDataRef          inDataRef);
XPLM_API XPLMDataTypeID XPLMGetDataRefTypes(
                         XPLMDataRef          inDataRef);
XPLM_API int        XPLMGetDatai(
                         XPLMDataRef          inDataRef);
XPLM_API void       XPLMSetDatai(
                         XPLMDataRef          inDataRef,
                         int                  inValue);
XPLM_API float      XPLMGetDataf(
                         XPLMDataRef          inDataRef);
XPLM_API void       XPLMSetDataf(
                         XPLMDataRef          inDataRef,
                         float                inValue);
XPLM_API double     XPLMGetDatad(
                         XPLMDataRef          inDataRef);
XPLM_API void       XPLMSetDatad(
                         XPLMDataRef          inDataRef,
                         double               inValue);
XPLM_API int        XPLMGetDatavi(
                         XPLMDataRef          inDataRef,
                         int *                outValues,              
                         int                  inOffset,
                         int                  inMax);
XPLM_API void       XPLMSetDatavi(
                         XPLMDataRef          inDataRef,
                         int *                inValues,
                         int                  inoffset,
                         int                  inCount);
XPLM_API int        XPLMGetDatavf(
                         XPLMDataRef          inDataRef,
                         float *              outValues,              
                         int                  inOffset,
                         int                  inMax);
XPLM_API void       XPLMSetDatavf(
                         XPLMDataRef          inDataRef,
                         float *              inValues,
                         int                  inoffset,
                         int                  inCount);
XPLM_API int        XPLMGetDatab(
                         XPLMDataRef          inDataRef,
                         void *               outValue,               
                         int                  inOffset,
                         int                  inMaxBytes);
XPLM_API void       XPLMSetDatab(
                         XPLMDataRef          inDataRef,
                         void *               inValue,
                         int                  inOffset,
                         int                  inLength);
typedef int (* XPLMGetDatai_f)(
                         void *               inRefcon);
typedef void (* XPLMSetDatai_f)(
                         void *               inRefcon,
                         int                  inValue);
typedef float (* XPLMGetDataf_f)(
                         void *               inRefcon);
typedef void (* XPLMSetDataf_f)(
                         void *               inRefcon,
                         float                inValue);
typedef double (* XPLMGetDatad_f)(
                         void *               inRefcon);
typedef void (* XPLMSetDatad_f)(
                         void *               inRefcon,
                         double               inValue);
typedef int (* XPLMGetDatavi_f)(
                         void *               inRefcon,
                         int *                outValues,              
                         int                  inOffset,
                         int                  inMax);
typedef void (* XPLMSetDatavi_f)(
                         void *               inRefcon,
                         int *                inValues,
                         int                  inOffset,
                         int                  inCount);
typedef int (* XPLMGetDatavf_f)(
                         void *               inRefcon,
                         float *              outValues,              
                         int                  inOffset,
                         int                  inMax);
typedef void (* XPLMSetDatavf_f)(
                         void *               inRefcon,
                         float *              inValues,
                         int                  inOffset,
                         int                  inCount);
typedef int (* XPLMGetDatab_f)(
                         void *               inRefcon,
                         void *               outValue,               
                         int                  inOffset,
                         int                  inMaxLength);
typedef void (* XPLMSetDatab_f)(
                         void *               inRefcon,
                         void *               inValue,
                         int                  inOffset,
                         int                  inLength);
XPLM_API XPLMDataRef XPLMRegisterDataAccessor(
                         const char *         inDataName,
                         XPLMDataTypeID       inDataType,
                         int                  inIsWritable,
                         XPLMGetDatai_f       inReadInt,
                         XPLMSetDatai_f       inWriteInt,
                         XPLMGetDataf_f       inReadFloat,
                         XPLMSetDataf_f       inWriteFloat,
                         XPLMGetDatad_f       inReadDouble,
                         XPLMSetDatad_f       inWriteDouble,
                         XPLMGetDatavi_f      inReadIntArray,
                         XPLMSetDatavi_f      inWriteIntArray,
                         XPLMGetDatavf_f      inReadFloatArray,
                         XPLMSetDatavf_f      inWriteFloatArray,
                         XPLMGetDatab_f       inReadData,
                         XPLMSetDatab_f       inWriteData,
                         void *               inReadRefcon,
                         void *               inWriteRefcon);
XPLM_API void       XPLMUnregisterDataAccessor(
                         XPLMDataRef          inDataRef);
typedef void (* XPLMDataChanged_f)(
                         void *               inRefcon);
XPLM_API int        XPLMShareData(
                         const char *         inDataName,
                         XPLMDataTypeID       inDataType,
                         XPLMDataChanged_f    inNotificationFunc,
                         void *               inNotificationRefcon);
XPLM_API int        XPLMUnshareData(
                         const char *         inDataName,
                         XPLMDataTypeID       inDataType,
                         XPLMDataChanged_f    inNotificationFunc,
                         void *               inNotificationRefcon);