src/raw/xplm.zig

const std = @import("std");
const config = @import("config");

pub const PluginID = c_int;

pub const KeyFlags = packed struct(c_int) {
    shift: bool,
    option_alt: bool,
    control: bool,
    down: bool,
    up: bool,
};

pub const FixedString150 = extern struct {
    buffer: [150]u8 = std.mem.zeroes([150]u8),
};

pub const CameraControlDuration = enum(c_int) {
    until_view_changes,
    forever,
    _,
};

pub const CameraPosition = extern struct {
    x: f32 = std.mem.zeroes(f32),
    y: f32 = std.mem.zeroes(f32),
    z: f32 = std.mem.zeroes(f32),
    pitch: f32 = std.mem.zeroes(f32),
    heading: f32 = std.mem.zeroes(f32),
    roll: f32 = std.mem.zeroes(f32),
    zoom: f32 = std.mem.zeroes(f32),
};

pub const CameraControlCallback = ?*const fn ([*c]CameraPosition, c_int, ?*anyopaque) callconv(.C) c_int;
pub extern fn XPLMControlCamera(inHowLong: CameraControlDuration, inControlFunc: CameraControlCallback, inRefcon: ?*anyopaque) void;
pub extern fn XPLMDontControlCamera() void;
pub extern fn XPLMIsCameraBeingControlled(outCameraControlDuration: [*c]CameraControlDuration) c_int;
pub extern fn XPLMReadCameraPosition(outCameraPosition: [*c]CameraPosition) void;

pub const DataRefHandle = ?*anyopaque;
pub const DataTypeID = packed struct(c_int) {
    int: bool,
    float: bool,
    double: bool,
    float_array: bool,
    int_array: bool,
    bytes: bool,
};
pub extern fn XPLMCountDataRefs() c_int;
pub extern fn XPLMGetDataRefsByIndex(offset: c_int, count: c_int, outDataRefs: [*c]DataRefHandle) void;
pub const DataRefInfo = extern struct {
    structSize: c_int = std.mem.zeroes(c_int),
    name: [*c]const u8 = std.mem.zeroes([*c]const u8),
    type: DataTypeID = std.mem.zeroes(DataTypeID),
    writable: c_int = std.mem.zeroes(c_int),
    owner: PluginID = std.mem.zeroes(PluginID),
};
pub extern fn XPLMGetDataRefInfo(inDataRef: DataRefHandle, outInfo: [*c]DataRefInfo) void;
pub extern fn XPLMFindDataRef(inDataRefName: [*c]const u8) DataRefHandle;
pub extern fn XPLMCanWriteDataRef(inDataRef: DataRefHandle) c_int;
pub extern fn XPLMIsDataRefGood(inDataRef: DataRefHandle) c_int;
pub extern fn XPLMGetDataRefTypes(inDataRef: DataRefHandle) DataTypeID;
pub extern fn XPLMGetDatai(inDataRef: DataRefHandle) c_int;
pub extern fn XPLMSetDatai(inDataRef: DataRefHandle, inValue: c_int) void;
pub extern fn XPLMGetDataf(inDataRef: DataRefHandle) f32;
pub extern fn XPLMSetDataf(inDataRef: DataRefHandle, inValue: f32) void;
pub extern fn XPLMGetDatad(inDataRef: DataRefHandle) f64;
pub extern fn XPLMSetDatad(inDataRef: DataRefHandle, inValue: f64) void;
pub extern fn XPLMGetDatavi(inDataRef: DataRefHandle, outValues: [*c]c_int, inOffset: c_int, inMax: c_int) c_int;
pub extern fn XPLMSetDatavi(inDataRef: DataRefHandle, inValues: [*c]c_int, inoffset: c_int, inCount: c_int) void;
pub extern fn XPLMGetDatavf(inDataRef: DataRefHandle, outValues: [*c]f32, inOffset: c_int, inMax: c_int) c_int;
pub extern fn XPLMSetDatavf(inDataRef: DataRefHandle, inValues: [*c]f32, inoffset: c_int, inCount: c_int) void;
pub extern fn XPLMGetDatab(inDataRef: DataRefHandle, outValue: ?*anyopaque, inOffset: c_int, inMaxBytes: c_int) c_int;
pub extern fn XPLMSetDatab(inDataRef: DataRefHandle, inValue: ?*anyopaque, inOffset: c_int, inLength: c_int) void;
pub const GetDataIntCallback = ?*const fn (?*anyopaque) callconv(.C) c_int;
pub const SetDataIntCallback = ?*const fn (?*anyopaque, c_int) callconv(.C) void;
pub const GetDataFloatCallback = ?*const fn (?*anyopaque) callconv(.C) f32;
pub const SetDataFloatCallback = ?*const fn (?*anyopaque, f32) callconv(.C) void;
pub const GetDataDoubleCallback = ?*const fn (?*anyopaque) callconv(.C) f64;
pub const SetDataDoubleCallback = ?*const fn (?*anyopaque, f64) callconv(.C) void;
pub const GetDataIntArrayCallback = ?*const fn (?*anyopaque, [*c]c_int, c_int, c_int) callconv(.C) c_int;
pub const SetDataIntArrayCallback = ?*const fn (?*anyopaque, [*c]c_int, c_int, c_int) callconv(.C) void;
pub const GetDataFloatArrayCallback = ?*const fn (?*anyopaque, [*c]f32, c_int, c_int) callconv(.C) c_int;
pub const SetDataFloatArrayCallback = ?*const fn (?*anyopaque, [*c]f32, c_int, c_int) callconv(.C) void;
pub const GetDataBytesCallback = ?*const fn (?*anyopaque, ?*anyopaque, c_int, c_int) callconv(.C) c_int;
pub const SetDataBytesCallback = ?*const fn (?*anyopaque, ?*anyopaque, c_int, c_int) callconv(.C) void;
pub extern fn XPLMRegisterDataAccessor(inDataName: [*c]const u8, inDataType: DataTypeID, inIsWritable: c_int, inReadInt: GetDataIntCallback, inWriteInt: SetDataIntCallback, inReadFloat: GetDataFloatCallback, inWriteFloat: SetDataFloatCallback, inReadDouble: GetDataDoubleCallback, inWriteDouble: SetDataDoubleCallback, inReadIntArray: GetDataIntArrayCallback, inWriteIntArray: SetDataIntArrayCallback, inReadFloatArray: GetDataFloatArrayCallback, inWriteFloatArray: SetDataFloatArrayCallback, inReadData: GetDataBytesCallback, inWriteData: SetDataBytesCallback, inReadRefcon: ?*anyopaque, inWriteRefcon: ?*anyopaque) DataRefHandle;
pub extern fn XPLMUnregisterDataAccessor(inDataRef: DataRefHandle) void;
pub const DataChangedCallback = ?*const fn (?*anyopaque) callconv(.C) void;
pub extern fn XPLMShareData(inDataName: [*c]const u8, inDataType: DataTypeID, inNotificationFunc: DataChangedCallback, inNotificationRefcon: ?*anyopaque) c_int;
pub extern fn XPLMUnshareData(inDataName: [*c]const u8, inDataType: DataTypeID, inNotificationFunc: DataChangedCallback, inNotificationRefcon: ?*anyopaque) c_int;

pub const DrawingPhase = enum(c_int) {
    first_cockpit = 35,
    panel = 40,
    gauges = 45,
    window = 50,
    last_cockpit = 55,
    local_map_3d = 100,
    local_map_2d = 101,
    local_map_profile = 102,
    _,
};
pub const DrawCallback = ?*const fn (DrawingPhase, c_int, ?*anyopaque) callconv(.C) c_int;
pub extern fn XPLMRegisterDrawCallback(inCallback: DrawCallback, inPhase: DrawingPhase, inWantsBefore: c_int, inRefcon: ?*anyopaque) c_int;
pub extern fn XPLMUnregisterDrawCallback(inCallback: DrawCallback, inPhase: DrawingPhase, inWantsBefore: c_int, inRefcon: ?*anyopaque) c_int;
